2015-11-11  Ben Elliston  <bje@gnu.org>

	* doc/user.xml (Summary File): 'untested', not 'runtested'.
	* doc/dejagnu.texi: Regenerate.

2015-11-11  Michael Forney  <forney@google.com>

	* lib/target.exp (default_target_compile): Honor LDFLAGS_FOR_TARGET.

2015-11-11  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi: Regenerate.

2015-11-10  Ben Elliston  <bje@gnu.org>

	* doc/user.xml: Fix runtest output formatting in <programlisting>.

2015-11-10  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.xml: Update month and year.
	* doc/user.xml: Lots of editorial fixes from Daniel Thibault
	<Daniel.Thibault@drdc-rddc.gc.ca>.

2015-09-10  Robert Suchanek  <Robert.Suchanek@imgtec.com>

	* baseboards/multi-sim.exp (rpath_flags): Add libgomp.so check.

2015-07-30  Pedro Alves  <palves@redhat.com>

	* lib/remote.exp (close_wait_program): New procedure.
	(local_exec, standard_close): Use it.

2015-05-23  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.xml: Fix broken URLs.
	* doc/dejagnu.texi: Regenerate.

2015-05-23  Ben Elliston  <bje@gnu.org>

	* doc/user.xml: Fix 'crosscompilation'.

2015-05-23  Ben Elliston  <bje@gnu.org>

	* doc/runtest.1 (log_dialog): Improve documentation.

2015-05-16  Filipe Brandenburger  <filbranden@google.com>

	* configure.ac: Enable subdir-objects, require automake 1.14.
	* Makefile.in: Regenerate.

2015-05-15  Filipe Brandenburger  <filbranden@google.com>

	* doc/dejagnu.xml: Fix typos such as stray }'s and @samp{...},
	possibly introduced in a conversion of .texi to SGML Docbook.
	* doc/user.xml: Likewise.
	* doc/ref.xml: Likewise.
	* doc/dejagnu.texi: Regenerate.

2015-05-15  Filipe Brandenburger  <filbranden@google.com>

	* runtest.exp (runtest): Introduce new --log_dialog option.
	* doc/runtest.1: Document it.
	* doc/user.xml: Likewise.
	* doc/dejagnu.texi: Regenerate.

2015-05-14  Steve Ellcey  <sellcey@imgtec.com>

	* baseboards/multi-sim.exp (get_library_dirlist): New.
	(dynamic_linker_flag): Use get_library_dirlist to find dynamic
	linker.