@@ -1,3 +1,7 @@
+2015-11-12  Ben Elliston  <bje@gnu.org>
+
+	* lib/framework.exp (note): Remove old commented-out code.
+
 2015-11-11  Ben Elliston  <bje@gnu.org>
 
 	* doc/user.xml (Summary File): 'untested', not 'runtested'.
